Style the body and the show paragraph

--- a/uhc-initial-experiments/Test.html
+++ b/uhc-initial-experiments/Test.html
@@ -38,12 +38,18 @@
 $(document).ready(jQueryMain);
 </script>
 <style type="text/css">
+body {
+    font-family: sans-serif;
+}
+
 p.neat {
     display: none;
     clear: both;
     margin: 1em 0;
     padding: 1em 15px;
-    background: #0F67A1;
+    background: #AFAAFF;
+    width: 256px;
+    border: 1px solid #666666
 }
 </style>
 </head>
